new add button for mobile screen

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Flip",
-  "name": "Flip prroject management version 1",
+  "name": "Flip project manager",
   "icons": [
     {
       "src": "favicon.ico",
