--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "8.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loading-icons": "^1.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^5.3.2",
